# Rust

./: Rust.cts  Rust.tmp
Chess/src/: board.rs  board.rs~
Maxwell/: Cargo.toml
Maxwell/src/: #main.rs#  .#main.rs  main.rs
another_function/src/: main.rs
csv_read/: Cargo.toml
csv_read/src/: main.rs  main.rs~
fib/src/: main.rs
guessing_game/src/: main.rs
matrix/: *cargo-test*  .gitignore  Cargo.toml
matrix/src/: #lib.rs#  csv_read.rs  ellipsoid_polarizability.rs  main.rs  matrix.csv  matrix.csv~  tensor_parse.rs~
stm32_rust_blink/: Cargo.toml  memory.x
stm32_rust_blink/.cargo/: config
stm32_rust_blink/src/: main.rs
stm32f4_st25r3911/: Cargo.toml  Embed.toml  debug.sh  ocd.sh
stm32f4_st25r3911/.cargo/: config
stm32f4_st25r3911/src/: main.rs  spi_no_dma.rs
