[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = '0.4'
nalgebra = '0.31.0'
lstsq = "0.4.0"
gnuplot = "0.0.37"
rayon = "1.5"
clap = { version = "4.0", features = ["derive"] }
